Get Proposal Status, refactor
